Support limiting builds to certain worker classes

--- a/master.cfg
+++ b/master.cfg
@@ -124,7 +124,11 @@ for w in worker_config.iterkeys():
     max_builds = 1
     if wc.has_key('max-builds'):
         max_builds = wc['max-builds']
-    c['workers'].append (worker.Worker(w, passwd, max_builds=max_builds))
+    wk = worker.Worker(w, passwd, max_builds=max_builds)
+    wk.flathub_classes = []
+    if wc.has_key('classes'):
+        wk.flathub_classes = wc['classes']
+    c['workers'].append (wk)
     if wc.has_key('arches'):
         build_workers.append(w)
         for a in wc['arches']:
@@ -789,6 +793,16 @@ status_builders = []
 
 build_factory = create_build_factory()
 
+def canStartBuild(builder, wfb, build):
+    classes = build.properties.getProperty ('flathub-config', {}).get("classes", [])
+    worker_classes = wfb.worker.flathub_classes
+    if not classes:
+        return True # Not specified, matches any (or none)
+    for c in classes:
+        if utils.asciiize(c) in worker_classes:
+            return True
+    return False
+
 for arch in flathub_arches:
     extra_fb_args = ['--arch', arch]
     if arch == 'x86_64':
@@ -797,6 +811,7 @@ for arch in flathub_arches:
     for i in range(0, num_builders_per_arch):
         c['builders'].append(
             util.BuilderConfig(name=getArchBuilderName(arch, i),
+                               canStartBuild=canStartBuild,
                                workernames=flathub_arch_workers[arch],
                                properties={'flathub-arch': arch, 'extra-fb-args': extra_fb_args },
                                factory=build_factory))
