reduce number of workers per arch
There's no benefit having more arch workers than master workers,
because the maximum number of builds we can ever have is one per
arch per master worker.

--- a/master.cfg
+++ b/master.cfg
@@ -47,7 +47,7 @@ flathub_keep_builds = getConfig('keep-builds', False)
 # Buildbot does unique builds per build + worker, so if we want a single worker
 # to build multiple apps of the same arch, then we need to have multiple build
 # ids for each arch, so we append a number which we calculate from the build id
-num_builders_per_arch = 16
+num_builders_per_arch = flathub_num_master_workers
 
 # Tracks the last build number that was used to update the repo for a particular build-id
 # So we avoid going backwards if the builds finish in the wrong order
