make new build steps fatal / warnings as appropriate
Failures to generate deltas or cache the source are not fatal. Allow
more time for deltas as it's been failing the KDE 5.10 build.

--- a/master.cfg
+++ b/master.cfg
@@ -454,6 +454,7 @@ def create_build_factory():
             name='Download previous revision',
             doStepIf=BuildIsOfficial,
             logEnviron=False,
+            haltOnFailure=True,
             commands=[
                 # We use bare-user mode so that the deltas work
                 shellArg(['ostree', '--repo=flathub-repo', 'init', '--mode=bare-user']),
@@ -464,6 +465,7 @@ def create_build_factory():
             name='Rebase build on previous revision',
             logEnviron=False,
             doStepIf=BuildIsOfficial,
+            haltOnFailure=True,
             commands=[
                 # Merge the two into a new repo
                 shellArg(['ostree', '--repo=merged-repo', 'init', '--mode=archive-z2']),
@@ -478,9 +480,12 @@ def create_build_factory():
             name='Generate static deltas',
             logEnviron=False,
             doStepIf=BuildIsOfficial,
+            timeout=10000,
+            warnOnFailure=True,
             command=['flatpak', 'build-update-repo', '--generate-static-deltas', 'repo']),
         steps.ShellSequence(
             name='Post-build work',
+            haltOnFailure=True,
             logEnviron=False,
             doStepIf=BuildIsOfficial,
             commands=[
@@ -511,6 +516,7 @@ def create_build_factory():
                            workerdest="merge-sources.sh"),
         steps.ShellCommand(name='stash downloads',
                            logEnviron=False,
+                           warnOnFailure=True,
                            command=['./merge-sources.sh', util.Interpolate('%(prop:builddir)s/../downloads')]),
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
