--- a/master.cfg
+++ b/master.cfg
@@ -1048,7 +1048,7 @@ if flathub_github_status_token != '':
 # home pages (linked to the 'titleURL').
 
 c['title'] = 'Flathub'
-c['titleURL'] = 'https://github.com/flatpak/flathub'
+c['titleURL'] = 'https://flathub.org'
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server is visible. This typically uses the port number set in
