--- a/master.cfg
+++ b/master.cfg
@@ -604,6 +604,7 @@ update_repo_factory.addSteps([
     steps.ShellSequence(name='Check and prepare repo',
                         logEnviron=False,
                         haltOnFailure=True,
+                        env={ 'GPGME_DEBUG' : '9' },
                         commands=[
         # Ensure files are readable
         shellArg(['chmod', '-R', 'a+rX', 'repo']),
@@ -613,7 +614,7 @@ update_repo_factory.addSteps([
         shellArg(['ostree', '--repo=import-repo', '--mode=archive-z2', 'init']),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
-        shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
+        shellArg(['flatpak', '-v', '--ostree-verbose', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
                         ]),
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
