Allow configuring the db uri

--- a/master.cfg
+++ b/master.cfg
@@ -43,6 +43,7 @@ flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_change_secret = getConfig('github-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
 flathub_keep_builds = getConfig('keep-builds', False)
+flathub_db_uri = getConfig('db-uri', "sqlite:///state.sqlite")
 
 # Buildbot does unique builds per build + worker, so if we want a single worker
 # to build multiple apps of the same arch, then we need to have multiple build
@@ -1122,7 +1123,7 @@ if flathub_github_change_secret != "":
 c['db'] = {
     # This specifies what database buildbot uses to store its state.  You can leave
     # this at its default for all but the largest installations.
-    'db_url' : "sqlite:///state.sqlite",
+    'db_url' : flathub_db_uri,
 }
 
 # configure a janitor which will delete all logs older than one month,
