Drop waterfall and console plugins

--- a/master.cfg
+++ b/master.cfg
@@ -1060,7 +1060,7 @@ c['titleURL'] = 'https://github.com/flatpak/flathub'
 c['buildbotURL'] = flathub_buildbot_uri
 
 c['www'] = dict(port=flathub_buildbot_port,
-                plugins=dict(waterfall_view={}, console_view={}),
+                plugins=dict(),
                 authz=authz)
 if auth:
     c['www']['auth'] = auth
