--- a/master.cfg
+++ b/master.cfg
@@ -1013,7 +1013,7 @@ c['builders'].append(
 force_prune = schedulers.ForceScheduler(
     name="prune",
     buttonName="Prune",
-    label="Prun",
+    label="Prune",
     builderNames=["Prune"],
 
     codebases=[util.CodebaseParameter(codebase='', hide=True)],
