Simplify and future-proof access control setup

--- a/master.cfg
+++ b/master.cfg
@@ -80,10 +80,7 @@ if flathub_github_auth_client != '':
 
 authz = util.Authz(
     allowRules=[
-        util.RebuildBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
-        util.StopBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
-        util.ForceBuildEndpointMatcher(role=adminsRole, defaultDeny=True),
-        util.EnableSchedulerEndpointMatcher(role=adminsRole, defaultDeny=True)
+        util.AnyControlEndpointMatcher(role=adminsRole)
     ],
     roleMatchers=roleMatchers
 )
