--- a/master.cfg
+++ b/master.cfg
@@ -347,6 +347,7 @@ class TitleObserver(logobserver.LogObserver):
 class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
     def __init__(self, **kwargs):
         self.setupShellMixin({'logEnviron': False,
+                              'timeout': 3600,
                               'usePTY': True})
         steps.BuildStep.__init__(self, haltOnFailure = True, **kwargs)
         self.addLogObserver('stdio', TitleObserver())
