Add flathub view

--- a/master.cfg
+++ b/master.cfg
@@ -1058,7 +1058,7 @@ c['titleURL'] = 'https://github.com/flatpak/flathub'
 c['buildbotURL'] = flathub_buildbot_uri
 
 c['www'] = dict(port=flathub_buildbot_port,
-                plugins=dict(),
+                plugins=dict(flathub_view={}),
                 authz=authz)
 if auth:
     c['www']['auth'] = auth
