Remove "(test)" from status now that we have flathub view

--- a/master.cfg
+++ b/master.cfg
@@ -721,9 +721,8 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
         defer.returnValue(buildbot.process.results.SUCCESS)
 
     def getResultSummary(self):
-        return { u'build': u"%s%s" %
-                 (u"" if self.build.getProperty("flathub-official-build", False) else u"(test) ",
-                  self.build.getProperty("flathub-desc", "?")) }
+        return { u'build': u"%s" %
+                 (self.build.getProperty("flathub-desc", "?")) }
 
 def ShouldUpdateRepo(step):
     if not BuildIsOfficial(step):
