builds: Drop global module data
All data are now in objects created by the code, owned
by master.cfg. This means reloading the master config re-loads
the builds.json file.

--- a/master.cfg
+++ b/master.cfg
@@ -18,7 +18,9 @@ from datetime import timedelta
 from datetime import datetime
 
 import utils
-import builds
+from builds import Builds
+
+builds = Builds('builds.json')
 
 f = open('config.json', 'r')
 config = utils.json_to_ascii(json.loads(f.read ()))
