Add support for gitlab change secrets

--- a/master.cfg
+++ b/master.cfg
@@ -43,6 +43,7 @@ flathub_admin_password = getConfig('admin-password')
 flathub_github_auth_client = getConfig('github-auth-client')
 flathub_github_auth_secret = getConfig('github-auth-secret')
 flathub_github_change_secret = getConfig('github-change-secret')
+flathub_gitlab_change_secret = getConfig('gitlab-change-secret')
 flathub_github_status_token = getConfig('github-status-token')
 flathub_keep_builds = getConfig('keep-builds', False)
 flathub_db_uri = getConfig('db-uri', "sqlite:///state.sqlite")
@@ -1108,13 +1109,18 @@ class FlathubGithubHandler(GitHubEventHandler):
 
         return [change], 'git'
 
+c['www']['change_hook_dialects'] = { }
+
 if flathub_github_change_secret != "":
-    c['www']['change_hook_dialects'] = {
-        'github': {
-            'class': FlathubGithubHandler,
-            'secret': flathub_github_change_secret,
-            'strict': True
-        }
+    c['www']['change_hook_dialects']['github'] = {
+        'class': FlathubGithubHandler,
+        'secret': flathub_github_change_secret,
+        'strict': True
+    }
+
+if flathub_gitlab_change_secret and flathub_gitlab_change_secret != "":
+    c['www']['change_hook_dialects']['gitlab'] = {
+        'secret': flathub_gitlab_change_secret
     }
 
 ####### DB URL
