Fix build issue with None deps

--- a/master.cfg
+++ b/master.cfg
@@ -544,15 +544,16 @@ class BuildDependenciesSteps(steps.BuildStep):
         buildid = self.build.getProperty ('flathub-build-id', "").replace("@","/")
         buildnr = self.build.getProperty ('flathub-buildnumber', 0)
         deps = builds.reverse_dependency_lookup(buildid)
-        for d in deps:
-            change = yield self.master.data.updates.addChange(
-                author = u"flathub",
-                comments = u'Rebuild triggered by %s build %s\n' % (buildid, buildnr),
-                project = 'forced-build-id-%s' % d.id,
-                branch = d.git_branch,
-                repository = d.url,
-                category = "build-dependency"
-            )
+        if deps:
+            for d in deps:
+                change = yield self.master.data.updates.addChange(
+                    author = u"flathub",
+                    comments = u'Rebuild triggered by %s build %s\n' % (buildid, buildnr),
+                    project = 'forced-build-id-%s' % d.id,
+                    branch = d.git_branch,
+                    repository = d.url,
+                    category = "build-dependency"
+                )
 
         defer.returnValue(buildbot.process.results.SUCCESS)
 
