Allow building same buildid on same worker if workdir differs
There is no need to limit this to one buildid per worker, as
we're using workdirs based on also arch + buildnr.

--- a/master.cfg
+++ b/master.cfg
@@ -264,7 +264,7 @@ c['collapseRequests'] = False
 
 ####### Custom builders
 
-# We create one worker lock per build-id, which is the same as the workdir
+# We create one worker lock per build-id + buildername, which is the same as the workdir
 # so multiple builds never work in the same workdir on any particular worker
 class BuildIDLockBuild(Build):
     _workerLocks = {}
@@ -280,7 +280,8 @@ class BuildIDLockBuild(Build):
 
     def startBuild(self, build_status, workerforbuilder):
         buildid = self.getProperty('flathub-build-id')
-        lock = BuildIDLockBuild.find_or_create_master_lock_for_buildid(buildid)
+        buildername = self.getProperty ('buildername', 0)
+        lock = BuildIDLockBuild.find_or_create_master_lock_for_buildid("%s-%s" % (buildername, buildid))
         self.setLocks([lock.access('exclusive'), flatpak_worker_lock.access('counting')])
         return Build.startBuild(self, build_status, workerforbuilder)
 
