Support alternative repo uris
This is needed for gitlab, because we need to build with
the http: uri, but changes come in as git: uris.

--- a/master.cfg
+++ b/master.cfg
@@ -140,6 +140,12 @@ for w in worker_config.iterkeys():
     if wc.has_key('update-repo'):
         flathub_update_workers.append(w)
 
+def get_canonical_uri(repo_uri):
+    alt_url = builds.get_alternative_repo_url(repo_uri)
+    if alt_url:
+            return alt_url
+    return repo_uri
+
 
 def change_should_build(change):
     try:
@@ -147,12 +153,19 @@ def change_should_build(change):
         forced_id = None
         if change.project.startswith("forced-build-id-"):
             forced_id = change.project[len("forced-build-id-"):]
-        info = builds.lookup_by_git(change.repository, change.branch, forced_id)
+        url = get_canonical_uri(change.repository)
+        info = builds.lookup_by_git(url, change.branch, forced_id)
         if info:
             return info.official or change.category == 'bot-build'
     except:
         pass
+
     return False
+
+@util.renderer
+def computeRepoUrl(props):
+    repo = props.getProperty ('repository', 0)
+    return get_canonical_uri(repo)
 
 ####### SCHEDULERS
 checkin = schedulers.AnyBranchScheduler(name="checkin",
@@ -402,6 +415,7 @@ def create_build_factory():
     build_factory.buildClass = BuildIDLockBuild
     build_factory.workdir = util.Property('flathub-build-id')
     build_factory.addSteps([
+        steps.SetProperty(name='Rewrite url',property="repository", value=computeRepoUrl),
         steps.Git(name="checkout manifest",
                   logEnviron=False,
                   repourl=util.Property('repository'),
@@ -742,6 +756,7 @@ def ShouldUpdateRepo(step):
 
 build_app_factory = util.BuildFactory()
 build_app_factory.addSteps([
+    steps.SetProperty(name='Rewrite url',property="repository", value=computeRepoUrl),
     steps.Git(name="checkout manifest",
               repourl=util.Property('repository'),
               mode='incremental', branch='master', submodules=False, logEnviron=False),
@@ -766,6 +781,7 @@ build_app_factory.addSteps([
                       'flathub-desc' : util.Property('flathub-desc'),
                       'flathub-config' : util.Property('flathub-config'),
                       'flathub-subject' : util.Property('flathub-subject'),
+                      'repository' : util.Property('repository'),
                       'reason' : util.Property('reason')
                   }),
     steps.Trigger(name='Update repository',
