update-repo: hardlink import all objects from built repo
This makes it faster to build-commit-from in the repo, because
we don't have to constantly look up files in the parent directory
which is slow due to not being in cache already, and having lots of
objects.

--- a/master.cfg
+++ b/master.cfg
@@ -630,6 +630,10 @@ update_repo_factory.addSteps([
         shellArg(['ostree', '--repo=repo', 'fsck']),
         # Create new repo we will import from
         shellArg(['ostree', '--repo=import-repo', '--mode=archive-z2', 'init']),
+        # Hardlink-import all the newly downloaded objects, for faster lookups
+        shellArg(['ostree', '--repo=repo', 'summary', '-u']), # Need this for pull-local
+        shellArg(['ostree', '--repo=import-repo', 'pull-local', 'repo']),
+        shellArg('rm -rf import-repo/refs/heads/*'),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
         shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
