Clean up everything when done
We were leaving a lot of files around when building runtimes, because
they build in custom subdirectories "sdk", which we didn't explicitly
remove.

--- a/master.cfg
+++ b/master.cfg
@@ -538,9 +538,7 @@ def create_build_factory():
         steps.ShellCommand(name='clean up',
                            alwaysRun=True,
                            logEnviron=False,
-                           command=['rm', '-rf',
-                                    '.flatpak-builder/build' if flathub_keep_builds else '.flatpak-builder',
-                                    'builddir', 'repo', 'flathub-repo', 'merged-repo', 'repo.tar'])
+                           command='rm -rf .flatpak-builder/build' if flathub_keep_builds else 'rm -rf .flatpak-builder .git *')
     ])
     return build_factory
 
