attempt to clean up rofiles-fuse mounts at the end of every build

--- a/master.cfg
+++ b/master.cfg
@@ -535,10 +535,13 @@ def create_build_factory():
                            logEnviron=False,
                            warnOnFailure=True,
                            command=['./merge-sources.sh', util.Interpolate('%(prop:builddir)s/../downloads')]),
-        steps.ShellCommand(name='clean up',
-                           alwaysRun=True,
-                           logEnviron=False,
-                           command='rm -rf .flatpak-builder/build' if flathub_keep_builds else 'rm -rf .flatpak-builder .git *')
+        steps.ShellSequence(name='clean up',
+                            alwaysRun=True,
+                            logEnviron=False,
+                            commands=[
+                                shellArg('for i in .flatpak-builder/rofiles/rofiles-*; do fusermount -u -z $i || true; done'),
+                                shellArg('rm -rf .flatpak-builder/build' if flathub_keep_builds else 'rm -rf .flatpak-builder .git *')
+                            ])
     ])
     return build_factory
 
