Use --timestamp=NOW in update-repo
This means we the timestamp is created on the same machine, and at the
time of the import, rather than the build machines. Doing it on the
build machines risk the timestamps for two immediate consecutive
builds getting a backwards-going timestamp if one arch builds faster on
the second build.

--- a/master.cfg
+++ b/master.cfg
@@ -637,7 +637,7 @@ update_repo_factory.addSteps([
         shellArg('rm -rf import-repo/refs/heads/*'),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
-        shellArg(['flatpak', 'build-commit-from', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
+        shellArg(['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
                         ]),
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
