Support end-of-life:ing apps

--- a/master.cfg
+++ b/master.cfg
@@ -610,6 +610,17 @@ class AddArchSteps(steps.BuildStep):
         r[u'build'] =  u"%s" % (self.build.getProperty("flathub-desc", "?"))
         return r
 
+@util.renderer
+def computeBuildCommitFromArgs(props):
+    eol = props.getProperty ('flathub-config', {}).get("end-of-life", None)
+    args = ['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--no-update-summary']
+    if eol:
+        args = args + [ "--force", "--end-of-life=%s" % (eol) ]
+    args = args + gpg_args
+    args = args + ["import-repo"]
+    return args
+
+
 update_repo_factory = util.BuildFactory()
 update_repo_factory.addSteps([
     steps.ShellCommand(name='clean old repo',
@@ -637,7 +648,7 @@ update_repo_factory.addSteps([
         shellArg('rm -rf import-repo/refs/heads/*'),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
-        shellArg(['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--no-update-summary'] + gpg_args + ["import-repo"])
+        shellArg(computeBuildCommitFromArgs)
                         ]),
     steps.ShellSequence(name='Merge to main repo and update',
                         logEnviron=False,
@@ -808,6 +819,7 @@ build_app_factory.addSteps([
                       'flathub-official-build' : util.Property('flathub-official-build'),
                       'flathub-desc' : util.Property('flathub-desc'),
                       'flathub-subject' : util.Property('flathub-subject'),
+                      'flathub-config' : util.Property('flathub-config'),
                       'reason' : util.Property('flathub-buildnumber')
                   }),
     steps.MasterShellCommand(name="Clean up storage on master",
