download-sources: Ensure download dir is on same fs as build dir

--- a/master.cfg
+++ b/master.cfg
@@ -655,7 +655,7 @@ class FlatpakDownloadStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep
         else:
             command = ['flatpak-builder', '--download-only', '--no-shallow-clone',
                        '--state-dir=' + flathub_upstream_sources_path,
-                       'builddir', util.Interpolate('%(prop:flathub-manifest)s')]
+                       flathub_upstream_sources_path + '/.builddir', util.Interpolate('%(prop:flathub-manifest)s')]
 
         rendered=yield self.build.properties.render(command)
         cmd = yield self.makeRemoteShellCommand(command=rendered)
