download-sources: Ignore dependencies

--- a/master.cfg
+++ b/master.cfg
@@ -653,7 +653,7 @@ class FlatpakDownloadStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep
 
             command = ['./flathub-download.sh', flathub_upstream_sources_path]
         else:
-            command = ['flatpak-builder', '--download-only', '--no-shallow-clone',
+            command = ['flatpak-builder', '--download-only', '--no-shallow-clone', '--allow-missing-runtimes',
                        '--state-dir=' + flathub_upstream_sources_path,
                        flathub_upstream_sources_path + '/.builddir', util.Interpolate('%(prop:flathub-manifest)s')]
 
