Support yaml files
We look for $appid.yml and $appid.yaml, and if they are not there we fall back to $appid.json

--- a/master.cfg
+++ b/master.cfg
@@ -380,8 +380,8 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
     def run(self):
         props = self.build.properties
         id = props.getProperty("flathub-id")
-        self.title = u"Building %s.json" % id
-        self.result_title = u"Failed to build %s.json" % id
+        self.title = u"Building %s" % id
+        self.result_title = u"Failed to build %s" % id
         self.updateSummary()
 
         command = ['flatpak-builder', '-v', '--force-clean', '--sandbox', '--delete-build-dirs',
@@ -401,7 +401,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
         yield self.runCommand(cmd)
 
         if not cmd.didFail():
-            self.result_title = u"Built %s.json" % id
+            self.result_title = u"Built %s" % id
 
         defer.returnValue(cmd.results())
 
@@ -748,6 +748,7 @@ def asciiBasename(s):
 class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
     def __init__(self, **kwargs):
         steps.BuildStep.__init__(self, **kwargs)
+        self.logEnviron = False
 
     @defer.inlineCallbacks
     def run(self):
@@ -799,13 +800,24 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
         if not flathub_config:
             flathub_config["empty"] = True
 
+        if content != None:
+            flathub_config = json.loads(content)
+
+        manifest = data.get_yaml_manifest()
+        hasYaml = yield self.pathExists("build/" + manifest)
+        if not hasYaml:
+            manifest = data.get_yml_manifest()
+            hasYml = yield self.pathExists("build/" + manifest)
+            if not hasYml:
+                manifest = data.get_json_manifest()
+
         p = {
             "flathub-id": data.id,
             "flathub-subject": "%s (%s)" % (git_subject, props.getProperty('got_revision')[:8]),
             "flathub-arches": list(arches),
             "flathub-build-id": buildid,
             "flathub-buildnumber": buildnumber,
-            "flathub-manifest": data.get_manifest(),
+            "flathub-manifest": manifest,
             "flathub-branch": data.fp_branch if data.fp_branch else flathub_branch ,
             "flathub-custom-buildcmd": data.custom_buildcmd,
             "flathub-official-build": data.official and not force_test_build,
