Fix flathub-download.sh check

--- a/master.cfg
+++ b/master.cfg
@@ -644,7 +644,7 @@ class FlatpakDownloadStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep
         self.updateSummary()
         if props.getProperty("flathub-custom-buildcmd", False):
             # Check for flathub-download.sh and only run if it exists
-            statCmd = remotecommand.RemoteCommand('stat', {'file': './flathub-download.sh'})
+            statCmd = remotecommand.RemoteCommand('stat', {'file': 'build/flathub-download.sh'})
             yield self.runCommand(statCmd)
             if statCmd.didFail():
                 self.result_title = u"Skipping download due to missing flathub-download.sh"
