Inherit collection-id into import-repo if set
This means that the new commits we create when importing builds have the right
collection-id for the final repo.

--- a/master.cfg
+++ b/master.cfg
@@ -620,7 +620,7 @@ class AddArchSteps(steps.BuildStep):
 @util.renderer
 def computeBuildCommitFromArgs(props):
     eol = props.getProperty ('flathub-config', {}).get("end-of-life", None)
-    args = ['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--no-update-summary']
+    args = ['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--force', '--no-update-summary']
     if eol:
         args = args + [ "--force", "--end-of-life=%s" % (eol) ]
     args = args + gpg_args
@@ -710,6 +710,7 @@ update_repo_factory.addSteps([
         shellArg(['ostree', '--repo=repo', 'summary', '-u']), # Need this for pull-local
         shellArg(['ostree', '--repo=import-repo', 'pull-local', 'repo']),
         shellArg('rm -rf import-repo/refs/heads/*'),
+        shellArg('if ostree config --repo=' + flathub_upstream_repo_path + ' get core.collection-id > /dev/null; then ostree config --repo=import-repo set core.collection-id $(ostree config --repo=' + flathub_upstream_repo_path + ' get core.collection-id) ; fi'),
         shellArg(['ostree', '--repo=import-repo', 'config', 'set', 'core.parent', flathub_upstream_repo_path]),
         # Create signed commits in the import repo
         shellArg(computeBuildCommitFromArgs)
