Revert accidental --force in last commit

--- a/master.cfg
+++ b/master.cfg
@@ -620,7 +620,7 @@ class AddArchSteps(steps.BuildStep):
 @util.renderer
 def computeBuildCommitFromArgs(props):
     eol = props.getProperty ('flathub-config', {}).get("end-of-life", None)
-    args = ['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--force', '--no-update-summary']
+    args = ['flatpak', 'build-commit-from', '--timestamp=NOW', '--src-repo=repo', '--no-update-summary']
     if eol:
         args = args + [ "--force", "--end-of-life=%s" % (eol) ]
     args = args + gpg_args
