--- a/master.cfg
+++ b/master.cfg
@@ -730,15 +730,15 @@ update_repo_factory.addSteps([
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
                        command=['rm', '-rf', 'repo', 'import-repo']),
-    steps.FileDownload(name='downloading update-appdata.sh',
+    steps.FileDownload(name='downloading post-update-repo.sh',
                        haltOnFailure=True,
                        hideStepIf=hide_on_success,
                        mode=0755,
-                       mastersrc="scripts/update-appdata.sh",
-                       workerdest="update-appdata.sh"),
-    steps.ShellCommand(name='update appdata',
+                       mastersrc="scripts/post-update-repo.sh",
+                       workerdest="post-update-repo.sh"),
+    steps.ShellCommand(name='post update',
                        logEnviron=False,
-                       command=['./update-appdata.sh', flathub_upstream_repo_path]),
+                       command=['./post-update-repo.sh', flathub_upstream_repo_path]),
     BuildDependenciesSteps(name='build dependencies')
 ])
 
