Don't use '@' in workdirs
Yocto complains and aborts if the base directory has a @
in the pathname. So, lets use __ instead...

--- a/master.cfg
+++ b/master.cfg
@@ -420,7 +420,7 @@ class FlatpakBuildStep(buildbot.process.buildstep.ShellMixin, steps.BuildStep):
 def create_build_factory():
     build_factory = util.BuildFactory()
     build_factory.buildClass = BuildIDLockBuild
-    build_factory.workdir = util.Property('flathub-build-id')
+    build_factory.workdir = util.Property('flathub-workdir')
     build_factory.addSteps([
         steps.SetProperty(name='Rewrite url',property="repository", value=computeRepoUrl),
         steps.Git(name="checkout manifest",
@@ -816,6 +816,7 @@ class FlathubPropertiesStep(steps.BuildStep, CompositeStepMixin):
             "flathub-subject": "%s (%s)" % (git_subject, props.getProperty('got_revision')[:8]),
             "flathub-arches": list(arches),
             "flathub-build-id": buildid,
+            "flathub-workdir": buildid.replace("@", "__"), # Yocto can't handle @ in the work directory name
             "flathub-buildnumber": buildnumber,
             "flathub-manifest": manifest,
             "flathub-branch": data.fp_branch if data.fp_branch else flathub_branch ,
@@ -866,6 +867,7 @@ build_app_factory.addSteps([
                       'flathub-id' : util.Property('flathub-id'),
                       'flathub-arches' : util.Property('flathub-arches'),
                       'flathub-build-id' : util.Property('flathub-build-id'),
+                      'flathub-workdir' : util.Property('flathub-workdir'),
                       'flathub-buildnumber' : util.Property('flathub-buildnumber'),
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
@@ -886,6 +888,7 @@ build_app_factory.addSteps([
                       'flathub-id' : util.Property('flathub-id'),
                       'flathub-arches' : util.Property('flathub-arches'),
                       'flathub-build-id' : util.Property('flathub-build-id'),
+                      'flathub-workdir' : util.Property('flathub-workdir'),
                       'flathub-buildnumber' : util.Property('flathub-buildnumber'),
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
@@ -909,6 +912,7 @@ build_app_factory.addSteps([
                       'flathub-id' : util.Property('flathub-id'),
                       'flathub-arches' : util.Property('flathub-arches'),
                       'flathub-build-id' : util.Property('flathub-build-id'),
+                      'flathub-workdir' : util.Property('flathub-workdir'),
                       'flathub-buildnumber' : util.Property('flathub-buildnumber'),
                       'flathub-artifact-dir' : util.Property('flathub-artifact-dir'),
                       'flathub-manifest' : util.Property('flathub-manifest'),
