Prune: Rotate backups and don't back up deltas

--- a/master.cfg
+++ b/master.cfg
@@ -1121,28 +1121,28 @@ c['builders'].append(
 
 # Prune repo
 
-@util.renderer
-def makeBackupName(props):
-    return flathub_upstream_repo_path + "-backup-" + datetime.now().strftime("%Y-%m-%d")
-
 prune_factory = util.BuildFactory()
 prune_factory.addSteps([
-    steps.ShellCommand(
-        name='Backup',
-        haltOnFailure=True,
-        logEnviron=False,
-        usePTY=True,
-        locks=[repo_lock.access('exclusive')],
-        timeout=10000,
-        command=['cp', '-aRln', flathub_upstream_repo_path, makeBackupName]),
-    steps.ShellCommand(
-        name='Prune',
-        haltOnFailure=True,
-        logEnviron=False,
-        usePTY=True,
-        locks=[repo_lock.access('exclusive')],
-        timeout=10000,
-        command=['ostree', 'prune', '--repo='+flathub_upstream_repo_path, '--refs-only', '--depth=3'])
+    steps.FileDownload(name='downloading backup-repo.sh',
+                       haltOnFailure=True,
+                       hideStepIf=hide_on_success,
+                       mode=0755,
+                       mastersrc="scripts/prune-repo.sh",
+                       workerdest="prune-repo.sh"),
+    steps.ShellCommand(name='Remove old backups',
+                       haltOnFailure=True,
+                       logEnviron=False,
+                       usePTY=True,
+                       timeout=20000,
+                       # Prepare without lock
+                       command=['./prune-repo.sh', "prepare", flathub_upstream_repo_path]),
+    steps.ShellCommand(name='Backup and Prune',
+                       haltOnFailure=True,
+                       logEnviron=False,
+                       usePTY=True,
+                       locks=[repo_lock.access('exclusive')],
+                       timeout=20000,
+                       command=['./prune-repo.sh', "main", flathub_upstream_repo_path])
 ])
 
 c['builders'].append(
