Update to use computeConfig()

--- a/master.cfg
+++ b/master.cfg
@@ -1,4 +1,6 @@
 # -*- python -*-
 # ex: set filetype=python:
 
-from buildbot.flathub_master import BuildmasterConfig
+from buildbot.flathub_master import computeConfig
+
+BuildmasterConfig = computeConfig()
