Revert "Limit delta jobs to two on repo in all cases"
This reverts commit a6b29db383776d4c0dafc785fcbd81d1eda5f045.

--- a/master.cfg
+++ b/master.cfg
@@ -727,7 +727,7 @@ update_repo_factory.addSteps([
                             shellArg(['rsync', '-rltv', '--ignore-existing',
                                       'import-repo/deltas/', flathub_upstream_repo_path + '/deltas/']),
                             shellArg(['ostree', 'pull-local', '-v', '--repo=' + flathub_upstream_repo_path, 'import-repo']),
-                            shellArg(['flatpak', 'build-update-repo', '--static-delta-jobs=2', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])],),
+                            shellArg(['flatpak', 'build-update-repo', '--generate-static-deltas'] + gpg_args + [flathub_upstream_repo_path])],),
     steps.ShellCommand(name='clean up',
                        logEnviron=False,
                        command=['rm', '-rf', 'repo', 'import-repo']),
